[gd_scene load_steps=7 format=2]

[ext_resource path="res://props/BaseProp.tscn" type="PackedScene" id=1]
[ext_resource path="res://tilemaps/props.tres" type="TileSet" id=2]
[ext_resource path="res://props/Altar.gd" type="Script" id=3]
[ext_resource path="res://sound/erweckungszauber-7544.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.5994, 21.6581 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.5746, 9.92727 )

[node name="BaseProp" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Shadow" parent="." index="0"]
position = Vector2( -13, 14 )
tile_data = PoolIntArray( -65537, 22, 0 )

[node name="Props" parent="." index="1"]
position = Vector2( -16, -48 )
tile_data = PoolIntArray( 65535, 18, 0 )

[node name="StaticBody2D" parent="." index="2"]
visible = false
position = Vector2( 0, -22 )
shape = SubResource( 1 )
disabled = true

[node name="AreaLetters" type="Area2D" parent="." index="3"]
position = Vector2( 0, -3 )
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaLetters" index="0"]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="Letters" type="Node2D" parent="." index="4"]

[node name="Letter1" type="TileMap" parent="Letters" index="0"]
modulate = Color( 1.50196, 1.50196, 1.50196, 1 )
position = Vector2( -4, -3 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 262143, 22, 0 )

[node name="Letter2" type="TileMap" parent="Letters" index="1"]
modulate = Color( 1.50196, 1.50196, 1.50196, 1 )
position = Vector2( -3, -7 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( -6, 19, 0 )

[node name="Letter3" type="TileMap" parent="Letters" index="2"]
modulate = Color( 1.50196, 1.50196, 1.50196, 1 )
position = Vector2( 5, 6 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( -327681, 20, 0 )

[node name="Letter4" type="TileMap" parent="Letters" index="3"]
modulate = Color( 1.50196, 1.50196, 1.50196, 1 )
position = Vector2( 4, 2 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( -65532, 21, 0 )

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource( 4 )

[connection signal="body_entered" from="AreaLetters" to="." method="_on_AreaLetters_body_entered"]
[connection signal="body_exited" from="AreaLetters" to="." method="_on_AreaLetters_body_exited"]
